src/components/Matchpair/Matchpair.css
.matchpair-title {
	display: flex;
	justify-content: center;
	align-items: center;
}

.matchpair-subtitle {
	display: flex;
	text-align: center;
	justify-content: center;
}

.control-group {
	display: flex;
	justify-content: center;
	align-items: center;
	gap: 1rem;
}

.stats {
	display: flex;
	justify-content: center;
	align-items: center;
	gap: 1rem;
}
.cards-container {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;

	gap: 1rem;
}
.game-board {
	display: flex;
	gap: 2rem;
	justify-content: center;
}

.cards-column {
	display: flex;
	flex-direction: column;
	gap: 1rem;
}

.cards-column h3 {
	text-align: center;
	margin-bottom: 1rem;
	color: #333;
}

.chinese-character {
	font-size: 2rem;
	text-align: center;
}

.translation {
	text-align: center;
}

.pinyin {
	font-style: italic;
	color: #666;
}

.meaning {
	margin-top: 0.5rem;
	font-weight: bold;
}

.next-button-container {
	display: flex;
	justify-content: center;
	margin-top: 20px;
}

.next-button {
	background-color: #4caf50;
	padding: 10px 20px;
	border: none;
	border-radius: 5px;
	cursor: pointer;
	font-size: 16px;
	transition: background-color 0.3s ease;
}

.next-button:hover {
	background-color: #45a049;
}

@media screen and (max-width: 375px) {
	.game-board {
		display: flex;
		justify-content: center;
		padding: 1rem;
	}

	.cards-container {
		align-items: center;
		text-align: center;
	}

	.cards-column {
		width: 100%;
		align-items: center;
	}

	.cards-column h3 {
		text-align: center;
	}

	.chinese-character,
	.translation,
	.pinyin,
	.meaning {
		text-align: center;
	}

	.matchpair-title,
	.matchpair-subtitle {
		flex-direction: column;
		text-align: center;
		align-items: center;
		justify-content: center;
	}

	.next-button-container {
		display: flex;
		justify-content: center;
		margin-top: 20px;
		margin-bottom: 20px;
	}
}

